more work front and back end

--- a/public/app/routes/community/community.scss
+++ b/public/app/routes/community/community.scss
@@ -20,6 +20,12 @@ width: 70%;
   right: 10vw;
   font-size: 14px;
 }
+@media (max-width: 1600px) {
+    .blogfloat {
+      display: none;
+    }
+}
+
 .parentContainer {
   position: relative;
   font-family: sans-serif;
