--- a/public/app/routes/payments/payments.scss
+++ b/public/app/routes/payments/payments.scss
@@ -1,21 +1,28 @@
 .paymentTopHalf {
+  margin: auto;
   margin-top: 50px;
-  width: 100%;
+  width: 70%;
   display: flex;
   justify-content: space-around;
   font-family: sans-serif;
 }
 .profilePic {
   width: 200px;
+  margin-left: 40px;
   height: 200px;
   border-radius: 6px;
   box-shadow: 4px 4px 6px #888888;
 }
 .paymentInfo {
-border: solid 1px #888888;
-border-radius: 6px;
+border: solid 1px #dadada;
+border-radius: 12px;
+height: 500px;
+width: 370px;
+background-color: #F1F1F1;
+box-shadow: 8px 8px 8px #a5a5a5;
 }
 .paymentName {
+  margin-left: 40px;
   font-size: 34px;
   line-height: 0px;
 }
@@ -25,6 +32,14 @@ border-radius: 6px;
 .paymentPaid {
   font-size: 20px;
 }
+//stripe Styling
+.stripeCover {
+  background-color: #3482C8;
+  color: white;
+  width: 100%;
+  height: 60px;
+  border-radius: 12px 12px 0px 0px;
+}
 .stripeInput {
   margin-top: 20px;
   margin-left: 20px;
@@ -32,10 +47,174 @@ border-radius: 6px;
 }
 .stripeTitle {
   text-align: center;
+  padding-top: 15px;
+  margin-top: 0px;
+}
+.progressInfo {
+  width: 60%;
+  text-align: right;
+  margin: auto;
+  font-family: sans-serif;
+}
+.textColor {
+  color: grey;
+  font-size: 18px;
+}
+.btnGreenColor {
+  background-color: #A1D544 !important;
+  border-color: #A1D544 !important;
+}
+.btnGreenColor:hover {
+  background-color: #bdf458 !important;
 }
 .progressBar {
   margin: auto;
-  width: 60%;
-  height: 20px;
-  background-color: orange;
+  width: 100%;
+  height: 40px;
+  background-color: #4f4f4f;
+  border-radius: 8px;
+}
+.removeMargin {
+  margin-left: 40px !important;
+  margin-top: 40px;
+}
+.stripeInput {
+  display: flex;
+  justify-content: space-between;
+}
+.stripeButtonFooter {
+  display: flex;
+  justify-content: center;
+  padding-top: 13px;
+  padding-bottom: 11px;
+  background-color: #E2E2E2;
+  margin-top: 5px;
+  border-radius: 0px 0px 12px 12px;
+}
+.sameLine {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+  margin-bottom: 130px;
+}
+.singleLine {
+  width: 200px;
+  display: flex;
+  justify-content: flex-end;
+}
+.expBoxStyle {
+  width: 60px !important;
+}
+.centerBoxStyle {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.textboxStyle {
+  height: 35px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: lighter;
+  letter-spacing: 1.6px;
+  border-radius: 5px;
+  box-shadow: 2px 2px #c1c1c1;
+  width: 200px;
+}
+// radio styling
+.codePen {
+  width: 300px;
+.container{
+  display: block;
+  position: absolute;
+  margin: auto;
+  height: 250px;
+  width: 200px;
+  bottom: 0; left:0; right: 0; top:0;
+  padding: 0;
+}
+
+.container ul{
+  list-style: none;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+ul li{
+  color: #AAAAAA;
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+  height: 50px;
+	border-bottom: 1px solid #111111;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  display: block;
+  position: relative;
+	bottom: 8px;
+  font-weight: 300;
+  font-size: 20px;
+  padding: 25px 25px 25px 80px;
+  margin: 0px auto;
+  height: 10px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+}
+
+ul li:hover label{
+	color: #000000;
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  top: 10px;
+  left: 20px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+ul li:hover .check {
+  border: 5px solid #000000;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 5px;
+	left: 5px;
+  margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 5px solid #FC6E4B;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #FC6E4B;
+}
+
+input[type=radio]:checked ~ label{
+  color: #FC6E4B;
+}
 }
