--- a/public/app/routes/home/home.scss
+++ b/public/app/routes/home/home.scss
@@ -331,6 +331,9 @@ font-size: 14px;
 .minihomeBoardInfo {
   display: none;
 }
+.trafficPic {
+  margin-bottom: -4px;
+}
 .miniInfoRight {
   display: none;
 }
