--- a/public/app/routes/payments/payments.scss
+++ b/public/app/routes/payments/payments.scss
@@ -34,7 +34,7 @@ box-shadow: 8px 8px 8px #a5a5a5;
 }
 //stripe Styling
 .stripeCover {
-  background-color: #3482C8;
+  background-color: #FC6E4B;
   color: white;
   width: 100%;
   height: 60px;
@@ -61,11 +61,12 @@ box-shadow: 8px 8px 8px #a5a5a5;
   font-size: 18px;
 }
 .btnGreenColor {
-  background-color: #A1D544 !important;
-  border-color: #A1D544 !important;
+  background-color: black !important;
+  border-color: black !important;
+  color: white !important;
 }
 .btnGreenColor:hover {
-  background-color: #bdf458 !important;
+  background-color: #444242 !important;
 }
 .progressBar {
   margin: auto;
@@ -77,6 +78,13 @@ box-shadow: 8px 8px 8px #a5a5a5;
 .removeMargin {
   margin-left: 40px !important;
   margin-top: 40px;
+  border-color: #FC6E4B !important;
+  background-color: white;
+  color: #FC6E4B;
+}
+.removeMargin:hover {
+  background-color: #FC6E4B;
+  color: white;
 }
 .stripeInput {
   display: flex;
