--- a/public/app/directives/footer/footer.scss
+++ b/public/app/directives/footer/footer.scss
@@ -13,6 +13,9 @@
   width: auto;
   margin-left: 20px;
 }
+.blackButton:focus {
+  outline: none;
+}
 .newsletter {
   background-color: #F6F6F6;
   border-radius: 4px;
@@ -21,6 +24,9 @@
   margin-left: 20px;
   margin-right: 20px;
   font-size: 18px;
+}
+.newsletter:focus {
+  outline: none;
 }
 .footerIcon {
   width: 40px;
