--- a/public/app/routes/confirmation/confirmation.scss
+++ b/public/app/routes/confirmation/confirmation.scss
@@ -2,5 +2,21 @@
         height: 300px;
         width: 500px;
         border-radius: 6px;
-        
+        box-shadow: 5px 5px 5px #dadada;
        }
+.centerConfirmContent {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin: auto;
+
+}
+.contentSider {
+  margin-top: 55px;
+  font-family: 'Raleway', sans-serif;
+  margin-left: 30px;
+}
+.mapsTitle {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+}
