--- a/slick/slick.css
+++ b/slick/slick.css
@@ -88,7 +88,9 @@
     font-family: sans-serif;
     text-align: center;
 }
-
+.slick-slide:focus {
+  outline: none;
+}
 [dir='rtl'] .slick-slide
 {
     float: right;
