--- a/public/app/directives/guarantee/guarantee.scss
+++ b/public/app/directives/guarantee/guarantee.scss
@@ -20,6 +20,34 @@
   margin-top: 20px;
   margin-bottom: 35px;
 }
+@media (max-width: 992px) {
+.guaranteeTitle {
+  font-family: 'Francois One', sans-serif;
+  }
+
+.guaranteeDesc {
+  font-family: 'Raleway', sans-serif;
+  margin-left: 10px;
+  margin-right: 10px;
+  }
+  .hrlines {
+    display: none;
+  }
+  .threeGuarantee {
+    flex-direction: column;
+    align-items: center;
+    .lines {
+      margin: auto;
+      border-bottom: solid 1px #E3E3E3;
+      width: 140px;
+    }
+  }
+  .guaranteeSection {
+    width: auto !important;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+ }
 .threeGuarantee {
   display: flex;
   justify-content: space-around;
@@ -42,6 +70,6 @@
   width: 230px;
 }
 .hrlines {
-  border-left: solid grey 1px;
+  border-left: solid #E3E3E3 1px;
   margin: 18px;
 }
