--- a/public/app/routes/community/community.scss
+++ b/public/app/routes/community/community.scss
@@ -63,3 +63,19 @@ width: 70%;
   color: grey;
   font-family: 'Francois One', sans-serif;
 }
+@media (max-width: 992px) {
+  .blogContainer {
+    width: 100%;
+  }
+  .blogTitle {
+    font-size: 25px;
+  }
+  .blogDescription {
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+  }
+  .bloginfo {
+    margin: 6px;
+    zoom: .85px;
+  }
+}
