--- a/public/app/routes/cart/cart.scss
+++ b/public/app/routes/cart/cart.scss
@@ -51,3 +51,20 @@
   color: #5B5B5B;
   margin-top: 25px;
 }
+@media (max-width: 992px) {
+.cartContainer {
+  zoom: .8;
+}
+.qtyTextBox {
+  width: 8px;
+}
+.itemcartPrice {
+  margin-left: 0px;
+}
+.itemname {
+  width: 150px;
+}
+.blackfocus {
+  margin-right: 0px !important;
+}
+}
