--- a/public/app/routes/confirmation/confirmation.scss
+++ b/public/app/routes/confirmation/confirmation.scss
@@ -20,3 +20,17 @@
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
 }
+@media (max-width: 992px) {
+  #map {
+    height: 300px;
+    width: 100%;
+  }
+  .centerConfirmContent {
+    flex-direction: column;
+    width: 85%;
+  }
+  .contentSider {
+    margin-top: auto;
+    margin-left: auto;
+  }
+}
