--- a/public/app/directives/footer/footer.scss
+++ b/public/app/directives/footer/footer.scss
@@ -68,6 +68,7 @@ a {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-bottom: 65px;
 }
 @media (min-width: 1200px) {
   .footerContainer {
