--- a/public/app/routes/home/home.scss
+++ b/public/app/routes/home/home.scss
@@ -497,7 +497,7 @@ li {
     }
 
     .miniTraffic {
-      position: absolute;
+    position: absolute;
     width: 990px !important;
 
     }
@@ -519,6 +519,13 @@ li {
     }
 }
 @media (max-width: 768px) {
+  .homeSplitContent {
+  font-size: 10px;
+  }
+  .bugfixer {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
     .homeOrangeMap {
         font-size: 17px;
     }
