fixed css issues

--- a/public/app/routes/reserveNow/reserve.scss
+++ b/public/app/routes/reserveNow/reserve.scss
@@ -387,4 +387,21 @@
   .removeBatteryImg {
     width: 90vw;
   }
+  .compareBatteries {
+    .contentSize {
+      .content {
+        margin-left: 20px;
+      }
+    }
+  }
+  .features {
+    .content {
+      .TopRow {
+        margin-left: 20px;
+      }
+      .bottomRow {
+        margin-left: 20px;
+      }
+    }
+  }
 }
