--- a/public/app/directives/checkoutCart/checkoutCart.scss
+++ b/public/app/directives/checkoutCart/checkoutCart.scss
@@ -107,3 +107,14 @@
   padding: 50px;
   padding-top: 140px;
 }
+@media (max-width: 992px) {
+.cartCheckoutContentContainer {
+  margin: 20px;
+  width: 100%;
+  padding: 20px;
+}
+.cartCheckoutContainer {
+  width: auto;
+  height: auto;
+}
+}
